jdownloader/components/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: gluetun
          image: ghcr.io/qdm12/gluetun:v3.39.1
          imagePullPolicy: Always
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - name: http
              containerPort: 5800
              protocol: TCP
          volumeMounts:
            - name: gluetun-data
              mountPath: /gluetun

        - name: app
          image: "jlesage/jdownloader-2"
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /config
            - name: black-library
              mountPath: /black-library

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: gluetun-data
          persistentVolumeClaim:
            claimName: gluetun-data-pvc
        - name: black-library
          hostPath:
            path: /media/black-library
            type: Directory
